<resources>
    <string name="app_name">Transport</string>
    <string name="find_by_stop">FIND BY STOP</string>
    <string name="find_by_line">FIND BY LINE</string>
    <string name="use_maps">USE MAPS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="enter_stop_name_or_number">Enter stop name or number</string>
    <string name="select_a_line">Select a line</string>
    <string name="select_direction">Select direction</string>
    <string name="enter_or_select_a_line">Enter or select a line</string>
    <string name="select_a_stop">Select a stop</string>
</resources>
